Add extended validation with custom tags. Improve response body for 400 error